objects/Dynamic_UI_Elements__c.object
<CustomObject>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Position__c</fullName>
        <label>Component Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Data__c</fullName>
        <label>Config Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dynamic_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dynamic UI</label>
        <referenceTo>Dynamic_UI__c</referenceTo>
        <relationshipLabel>Dynamic UI Elements</relationshipLabel>
        <relationshipName>Dynamic_UI_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dynamic UI Elements</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Config_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DUE-{0000}</displayFormat>
        <label>Dynamic UI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic UI Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>